# condukt

./: .credo.exs  .gitignore  AGENTS.md  CHANGELOG.md  README.md  blick.toml  checksum-Elixir.Condukt.Bashkit.NIF.exs  checksum-Elixir.Condukt.Workflows.NIF.exs  cliff-release.toml  cliff.toml  mise.toml  mix.exs
.blick/skills/condukt-elixir-review/: SKILL.md
.github/workflows/: blick-learn.yml  blick.yml  condukt.yml  release.yml  website.yml
credo/checks/: no_nested_modules.ex  no_rescue.ex  no_typespecs.ex
docs/: remote-runtime.md
guides/: agents.md  anonymous_workflows.md  compaction.md  getting_started.md  installation.md  overview.md  project_instructions.md  providers.md  redaction.md  sandbox.md  secrets.md  sessions_and_persistence.md  streaming_and_events.md  subagents.md  telemetry.md  tools.md  workflow_starlark_api.md  workflows.md
lib/: condukt.ex  helmsman.ex
lib/condukt/: anonymous_agent.ex  anonymous_run.ex  application.ex  compactor.ex  context.ex  message.ex  operation.ex  redactor.ex  sandbox.ex  secret_provider.ex  secrets.ex  session.ex  session_store.ex  telemetry.ex  tool.ex  tools.ex  workflows.ex
lib/condukt/bashkit/: nif.ex
lib/condukt/compactor/: sliding.ex  tool_result_prune.ex
lib/condukt/context/: skill.ex
lib/condukt/engine/: cli.ex
lib/condukt/operation/: submit_tool.ex
lib/condukt/providers/: ollama.ex
lib/condukt/redactors/: regex.ex  secrets.ex
lib/condukt/sandbox/: local.ex  virtual.ex
lib/condukt/session_store/: disk.ex  memory.ex  snapshot.ex
lib/condukt/tools/: bash.ex  command.ex  edit.ex  glob.ex  grep.ex  muon_trap_runner.ex  read.ex  subagent.ex  write.ex
lib/condukt/workflows/: agent_shim.ex  builtins.ex  error.ex  eval.ex  fetcher.ex  lockfile.ex  manifest.ex  nif.ex  project.ex  resolver.ex  runtime.ex  store.ex  tool_registry.ex  workflow.ex
lib/glossia/: agent.ex
lib/glossia/agent/: session.ex
lib/helmsman/: application.ex  runtime_provider.ex  session.ex  tool.ex
lib/helmsman/session_store/: disk.ex  memory.ex
livebooks/: local_playground.livemd  sandbox_demo.livemd
native/condukt_bashkit/: Cargo.toml  README.md  rust-toolchain.toml
native/condukt_bashkit/.cargo/: config.toml
native/condukt_bashkit/src/: lib.rs
native/condukt_workflows/: Cargo.toml  README.md
native/condukt_workflows/src/: error.rs  errors.rs  eval.rs  hash.rs  lib.rs  parse.rs  resolve.rs  runtime.rs  terms.rs  value.rs
notebooks/: sandbox_demo.livemd
scripts/: generate_nif_checksum.exs  version.exs  virtual_smoke_test.exs  workflows_smoke_test.exs
test/: condukt_test.exs  test_helper.exs
test/condukt/: anonymous_run_test.exs  compactor_test.exs  context_test.exs  message_test.exs  operation_test.exs  redactor_test.exs  sandbox_test.exs  secrets_test.exs  session_store_disk_test.exs  session_store_memory_test.exs  session_test.exs  tool_test.exs  workflows_test.exs
test/e2e/: sandbox_exe_test.exs
test/helmsman/: session_store_disk_test.exs  session_store_test.exs  session_test.exs
test/support/: llm_provider.ex  test_agent.ex  tool_case.ex
website/: .eleventy.js  .gitignore  eleventy.config.mjs  package-lock.json  package.json  wrangler.toml
website/src/: index.njk  sitemap.njk
(+73 files in other folders)
