[package]
name = "condukt_bashkit"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rustler NIF wrapping bashkit's virtual sandbox for Condukt"
publish = false

[lib]
name = "condukt_bashkit"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
bashkit = { version = "0.3", features = ["git", "realfs"] }
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "io-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
